kubernetes/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: ivolve
  labels:
    app: flask-app
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
  - name: http
    port: 80
    targetPort: 5000
    protocol: TCP
